# Autonomous-Rover

./: README.md
chassis_control/scripts/: chassis_control_node.py
depthImage2pointCloud-master/: CMakeLists.txt
depthImage2pointCloud-master/launch/: depth_image_projection.launch
depthImage2pointCloud-master/src/: pointcloud_projection.cpp
graph_planner/csv/: 0527_exp.csv
graph_planner/src/: graph_planner_0519.cpp  graph_planner_origin.cpp
llm/api_key/: api_key.txt  prompt.txt
localization_manager/: CMakeLists.txt  README.md  package.xml
localization_manager/include/localization_manager/: localization_manager.h
localization_manager/launch/: localization_manager.launch
localization_manager/src/: localization_manager.cpp  localization_manager_node.cpp
manipulation/models/Armpi_Pro_code/armpi_pro_bringup/launch/: start_functions.launch
manipulation/models/Armpi_Pro_code/armpi_pro_bringup/scripts/: start_node.sh
manipulation/models/Armpi_Pro_code/armpi_pro_demo/expansion_board_demo/: BusServo_Move.py
manipulation/models/Armpi_Pro_code/intelligent_grasp/scripts/: intelligent_grasp_node.py
manipulation/scripts/: pick_and_place.py
node_link_generator/: CMakeLists.txt  README.md  map.yaml  map_test.yaml  package.xml  points.csv
node_link_generator/scripts/: image_to_csv.py
object_detection/yolov5_ros/launch/: yolov5.launch
object_detection/yolov5_ros/src/yolov5/data/: coco2.yaml
point_tf/: CMakeLists.txt  package.xml
point_tf/include/point_tf/: point_tf.h
point_tf/src/: point_tf.cpp
position_estimation/: CMakeLists.txt
position_estimation/launch/: target_position_estimation.launch
true_rt_tag/: CMakeLists.txt  README.md  package.xml  tags.yaml
true_rt_tag/config/: ee405a_2024.yaml  ee405a_2024_test.yaml  n1_room112_test.yaml  n1_room117_exp.yaml  n1_room117_exp2.yaml  n1_room117_v1.yaml  n1_room117_whole.yaml
true_rt_tag/include/true_rt_tag/: true_rt_tag.h
true_rt_tag/launch/: true_rt_tag.launch
true_rt_tag/rviz/: rviz_config.rviz
true_rt_tag/src/: true_rt_tag.cpp  true_rt_tag_intersection.cpp  true_rt_tag_node.cpp
