<?xml version="1.0"?>
<package format="2">
  <name>true_rt_tag</name>
  <version>0.0.0</version>
  <description>The true_rt_tag package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="sungjae_min@kaist.ac.lkr">Min Sungjae</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>MIT</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <url type="website">https://github.com/MinSungjae/true_rt_tag</url>
  <url type="website">http://unmanned.kaist.ac.kr/</url>


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <author email="sungjae_min@kaist.ac.kr">Min Sungjae</author>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>apriltag_ros</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>apriltag_ros</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>apriltag_ros</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
